# shortsforge

./: .coverage  .env.example  .gitignore  README.md  SECURITY.md  notes.md  pyproject.toml  ruff.toml
.github/copilot/agents/: shortsforge.agent.md
.github/copilot/skills/short-form-best-practices/: SKILL.md
.github/workflows/: ci.yml
docs/: demo-script.md
samples/: README.md
src/shortsforge/cli/: main.py
src/shortsforge/mcp_server/: server.py
src/shortsforge/pipeline/: broll.py  captions.py  edit.py  hooks.py  ingest.py  render.py  repurpose.py  script.py  story.py  storyboard.py
src/shortsforge/preview/: app.py  jobs.py
src/shortsforge/preview/templates/: base.html  clip_detail.html  clips.html  dashboard.html  jobs.html  repurpose.html  script.html  story.html
src/shortsforge/providers/: foundry_iq.py  imagery.py  llm.py  tts.py
src/shortsforge/publishing/: youtube.py  youtube_auth.py
src/shortsforge/security/: __init__.py  disk.py  ffmpeg.py  http.py  moderation.py  paths.py  prompt_guard.py  rate_limit.py  secrets.py
tests/pipeline/: test_hooks.py  test_ingest.py
tests/preview/: test_jobs.py
tests/security/: test_adversarial.py  test_security.py
